--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.7"
 install:
-    - pip install poerty
+    - pip install poetry
     - poetry install
 script:
   - pytest
